mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: abdullah
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
