ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abdullah-ingress
  namespace: abdullah
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-app-service   # must be a Service, not Deployment
            port:
              number: 80
